--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,8 +7,8 @@
 
 .login-form {
     border: 1px solid black;
-    min-width: 400px;
-    height: 400px;
+    max-width: 400px;
+    height: 300px;
     background-color: #333;
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +24,7 @@
 
 .form-section > label + * {
     flex: 1 0 120px;
+    margin: 5px 0;
 }
 
 .form-section > label {
