--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,18 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 70vh;
 }
 
 .login-form {
     border: 1px solid black;
     max-width: 400px;
-    height: 300px;
-    background-color: #333;
+    background-color: #444;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    padding: 16px;
+    padding: 20px;
 }
 
 .form-section {
@@ -24,7 +23,7 @@
 
 .form-section > label + * {
     flex: 1 0 120px;
-    margin: 5px 0;
+    margin: 8px 0;
 }
 
 .form-section > label {
@@ -42,4 +41,8 @@ button {
     text-transform: uppercase;
     letter-spacing: .09em;
     border-radius: 2px;
+}
+
+button:hover {
+    cursor: pointer;
 }
