--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,18 +1,18 @@
+body {
+    background: aquamarine;
+}
+
 .form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
 .login-form {
-    border: 1px solid black;
-    max-width: 400px;
-    background-color: #444;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 20px;
+    padding: 0;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .form-section {
@@ -21,28 +21,35 @@
     align-items: center;
 }
 
-.form-section > label + * {
-    flex: 1 0 120px;
-    margin: 8px 0;
+.form-section:not(:last-child) {
+    margin-bottom: 20px;
 }
 
 .form-section > label {
+    padding: 8px;
+    font-weight: 300;
+    letter-spacing: .09em;
+    text-transform: uppercase;
     flex: 1 0 120px;
     max-width: 220px;
-    color: whitesmoke;
 }
 
-button {
+.form-section > label + * {
+    flex: 1 0 220px;
+}
+
+.form-section input {
+    padding: 15px;
+    border: none;
+}
+
+.form-section button {
     margin-left: auto;
     padding: 8px 16px;
     border: none;
-    background: whitesmoke;
-    color: #333;
+    background: #333;
+    color: #f2f2f2;
     text-transform: uppercase;
     letter-spacing: .09em;
     border-radius: 2px;
-}
-
-button:hover {
-    cursor: pointer;
 }
