--- a/src/components/Navigation/Nav.css
+++ b/src/components/Navigation/Nav.css
@@ -1,19 +1,23 @@
 nav {
-    background-color: #333;
-    height: 5%;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: flex-end;
-    align-items: baseline;
-    flex-direction: row;
+  background-color: #333;
+  height: 5%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: baseline;
+  flex-direction: row;
 }
 
 h1 {
-    flex: 2 2 50%;
+  flex: 2 2 40%;
 }
 
 .link {
-    text-decoration: none;
-    color: whitesmoke;
-    margin: 0 15px;
+  text-decoration: none;
+  color: whitesmoke;
+  margin: 0 8px;
+  text-transform: uppercase;
+  letter-spacing: 0.09em;
+  font-weight: 300;
+  font-size: 14px;
 }
