--- a/src/routes/ProjectList/ProjectList.css
+++ b/src/routes/ProjectList/ProjectList.css
@@ -1,8 +1,11 @@
 .list-header {
     text-align: center;
     color: whitesmoke;
-    font-size: 2.0vw;
-    margin-bottom: 100px;
+    font-size: 4vw;
+    margin: 50px auto;
+    text-transform: uppercase;
+    letter-spacing: .09em;
+    font-weight: 300;
 }
 
 .list-projecttiles {
