broke out Form component, added edit route

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
 }
 
-section .large-text {
+.large-text {
     text-align: center;
     color: whitesmoke;
     font-size: 4.5vw;
