--- a/src/routes/Project/Project.css
+++ b/src/routes/Project/Project.css
@@ -20,3 +20,18 @@
     letter-spacing: .09em;
     text-transform: uppercase;
 }
+
+.button {
+    margin-left: auto;
+    padding: 8px 16px;
+    border: none;
+    background: #333;
+    color: #f2f2f2;
+    text-transform: uppercase;
+    letter-spacing: .09em;
+    border-radius: 2px;
+}
+
+.button:hover {
+    cursor: pointer;
+}
