--- a/src/routes/ViewProject/ViewProject.css
+++ b/src/routes/ViewProject/ViewProject.css
@@ -22,6 +22,7 @@
 }
 
 .button {
+    display: block;
     margin-left: auto;
     padding: 8px 16px;
     border: none;
@@ -32,6 +33,9 @@
     border-radius: 2px;
 }
 
+#link {
+    text-decoration: none;
+}
 .button:hover {
     cursor: pointer;
 }
