center searchbar and switch  in dashboard component, add label to searchbar

--- a/src/routes/Dashboard/Dashboard.css
+++ b/src/routes/Dashboard/Dashboard.css
@@ -18,8 +18,35 @@
   max-width: 1200px;
 }
 
+.search-container, 
+.switch-container {
+	width: 80%;
+	margin: 8px auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .search-container {
-	margin: 8px;
+	margin-bottom: 50px;
+}
+
+#search {
+	padding: 15px;
+	border: none;
+	max-width: 500px;
+}
+
+.screen-reader-label {
+	border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    position: absolute !important;
+    width: 1px;
+    word-wrap: normal !important;
 }
 
 .switch {
