edit css to enhance text/background contrast

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -28,7 +28,7 @@ section .text {
   text-align: center;
   font-size: 2vw;
   line-height: 2.5vw;
-  color: darkmagenta;
+  color: whitesmoke;
 }
 
 section .text,
