add media query to landing page - increase image size on desktop

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -42,3 +42,11 @@ section .large-text {
 .landingpage-container section {
   margin-bottom: 100px;
 }
+
+/* DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .img {
+    width: 1280px;
+    height: 548px;
+  }
+}
