--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -24,10 +24,10 @@ section .img {
 
 section .text {
   max-width: 80%;
-  margin: 5% auto;
+  margin: 20px auto;
   text-align: center;
-  font-size: 2vw;
-  line-height: 2.5vw;
+  font-size: 3vw;
+  line-height: 3.5vw;
   color: whitesmoke;
 }
 
@@ -40,12 +40,24 @@ section .large-text {
 }
 
 .landingpage-container section {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 /* DESKTOP */
 @media only screen and (min-width: 1024px) {
+  h3 {
+    margin: 20px auto;
+  }
+  .large-text {
+    font-size: 3vw;
+  }
+  section .text {
+    font-size: 1.2vw;
+    line-height: 1.7vw;
+    margin: 3% auto;
+  }
   .img {
+    margin: 0 auto;
     width: 1280px;
     height: 548px;
   }
